fix(hero-ui) fix spacing issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,10 +20,13 @@
   --font-urban: "Urban Storm", sans-serif;
   --font-grotesk: "BDO Grotesk", sans-serif;
 }
+body{
+  background:#F4F4F4;
+}
 .hero_bg {
   background-image: url('/hero-image-1.svg'), url('/hero-image-2.svg');
   background-repeat: no-repeat;
-  background-position: left 130px top 30px, right 130px top 30px;
+  background-position: left 80px top 31px, right 80px top 51px;
   background-size: 384px
   
   
@@ -85,7 +88,7 @@
     width: 26px; /* Initial state */
   }
   40% {
-    width: 14px; /* Shrink */
+    width: 19px; /* Shrink */
   }
 
 
